--- a/springbatch/pom.xml
+++ b/springbatch/pom.xml
@@ -18,6 +18,13 @@
 
     <dependencies>
 
+        <!-- Json Serialize -->
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.5.3</version>
+		</dependency>
+
         <!-- Spring Core -->
         <dependency>
             <groupId>org.springframework</groupId>
