--- a/springbatch/pom.xml
+++ b/springbatch/pom.xml
@@ -18,11 +18,18 @@
 
     <dependencies>
 
-        <!-- Json Serialize -->
+        <!-- Json Serialize1 (Jackson) -->
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
     		<version>2.5.3</version>
+		</dependency>
+		
+        <!-- Json Serialize2 (Gson) -->
+		<dependency>
+  			<groupId>com.google.code.gson</groupId>
+  			<artifactId>gson</artifactId>
+  			<version>2.8.5</version>
 		</dependency>
 
         <!-- Spring Core -->
