--- a/springbatch/pom.xml
+++ b/springbatch/pom.xml
@@ -18,12 +18,12 @@
 
     <dependencies>
 
-        <!-- Json Serialize1 (Jackson) -->
+        <!-- Json Serialize1 (Jackson)
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
     		<version>2.5.3</version>
-		</dependency>
+		</dependency> -->
 		
         <!-- Json Serialize2 (Gson) -->
 		<dependency>
